--- a/etc/dockerfile
+++ b/etc/dockerfile
@@ -1,10 +1,10 @@
-FROM amd64/golang:alpine3.18 AS build
+FROM golang:alpine3.18 AS build
 RUN apk add build-base git
 WORKDIR /src
 COPY . .
 RUN make build_linux
 
-FROM amd64/alpine:latest
+FROM alpine:latest
 RUN apk add --no-cache ca-certificates && \
     update-ca-certificates
 COPY --from=build /src/_output/linux/yarr /usr/local/bin/yarr
